apps/media/radarr/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-external
  namespace: media
  labels:
    external-dns.edgard.org/scope: external
spec:
  parentRefs:
  - name: external
    namespace: platform-system
    sectionName: https
  hostnames:
  - radarr.edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: radarr
      port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-internal
  namespace: media
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
  - name: internal
    namespace: platform-system
    sectionName: https
  hostnames:
  - radarr.edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: radarr
      port: 7878
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-external-auth
  namespace: media
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: radarr-external
  oidc:
    provider:
      issuer: https://id.edgard.org
    clientID: envoy-gateway
    clientSecret:
      name: envoy-oidc-client
    redirectURL: https://radarr.edgard.org/oauth2/callback
    logoutPath: /oauth2/logout
    cookieDomain: edgard.org
    scopes:
    - openid
    - profile
    - email
